# goldsky-mvp

./: README.md  main.tf
api/: pyproject.toml
api/src/: database.py  main.py  settings.py
worker/: pyproject.toml
